# Django_Web_Store

./: README.md  manage.py  pyproject.toml  restore_data_from_json.py  save_data_to_json.py
Django_Web_Store/: settings.py  urls.py
blogpost/: forms.py  models.py  views.py
blogpost/migrations/: 0001_initial.py  0002_alter_blogpost_slug.py  0003_alter_blogpost_slug_alter_blogpost_title.py  0004_alter_blogpost_slug.py  0005_alter_blogpost_slug_alter_blogpost_title.py  0006_alter_blogpost_slug_alter_blogpost_title.py  0007_alter_blogpost_slug_alter_blogpost_title.py
blogpost/templates/blogpost/: post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: populate_data.py
catalog/migrations/: 0001_initial.py  0002_alter_contact_phone.py  0002_initial.py  0002_product_user.py  0004_version.py
catalog/templates/: base.html  contacts.html  create_product.html  delete_product.html  edit_product.html  home.html  navbar.html  product_detail.html  product_list.html
catalog/templatetags/: mediapath.py
users/: forms.py  models.py  tokens.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_email_verified.py
users/templates/users/: account_activation_email.html  incorrect_verify.html  login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  profile_update.html  register.html  registration.html  subscriptions.html  update_profile.html  verified_email.html  verify_email.html
