[tool.poetry]
name = "django-web-store"
version = "0.1.0"
description = ""
authors = ["Евгений Ермак <144560375+EvgeniiErmak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.18.1"
django-debug-toolbar = "^3.2.4"
faker = "^21.0.0"
secure-smtplib = "^0.1.1"
django-crispy-forms = "^2.1"
django = "4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
